--- a/Wiki/中文/瘟疫之心/說明.md
+++ b/Wiki/中文/瘟疫之心/說明.md
@@ -8,11 +8,7 @@
 ## 描述
 
 這個模組為遊戲引入了《State of Decay 2》中知名的血疫疾病、瘟疫之心、瘟疫感染、瘟疫區域！
-**在全新的層次上測試你的生存技巧。監控你的角色狀況，避免疾病和感染摧毀你！**
-
-## COMPONENTS
-
-模組中包含的機制：
+**在全新的層次上測試你的生存技巧，避免疾病和感染摧毀你！**
 
 # 區域
 
@@ -37,22 +33,21 @@
    
 # 感染
 
-## ![image](/Wiki/logos/Plague.jpg) 瘟疫感染
+## ![image](/Wiki/logos/Plague.jpg) 血疫感染
 
 # ☢️ 血疫感染
 
-血疫感染（Blood Plague Infection） 是由感染血疫病毒的喪屍引發的一種致命疾病。這種感染對玩家的角色構成了重大威脅。
+血疫感染（Blood Plague Infection） 是由感染血疫病毒的喪屍或瘟疫區域引發的一種致命疾病。這種感染對玩家的角色構成了重大威脅。
 
 1. **感染來源**
-   - 血疫感染是由喪屍攻擊或接觸引起的。
+   - 血疫感染通常是由喪屍攻擊或接觸引起的，不過進入瘟疫區域也會造成感染。
 
 2. **感染進程**
-   - 當角色被血疫喪屍攻擊時，感染進度條會開始填滿。
-   - 當感染進度達到 100% 時，角色會轉化為喪屍，徹底死亡。
+   - 當角色被喪屍攻擊時，感染進度條會開始填滿。
+   - 當感染進度達到第二階段結束 100% 時，角色會徹底死亡。
 
 3. **感染症狀**
-   - 角色感染後會出現症狀，包括疲勞、生命值降低以及動作遲緩等。
-   - 隨著感染的加重，角色的狀態會變得越來越差。
+   - 初期沒有症狀，當瘟疫條到達第二階段時，您將開始失去體力和健康。
 
 4. **治療方法**
    - 血疫注射器（Blood Plague Cure）：需要收集一定數量的血疫樣本（Plague Samples）來製作，該藥物可以完全治癒血疫感染。
@@ -61,6 +56,6 @@
 5. **血疫樣本獲取方式**
    - 血疫樣本是從醫院搜索或摧毀瘟疫之心後獲得的資源。
    
-   ## ![image](/Wiki/images/PlagueSamples.jpg) 血疫樣本
+   ## ![image](/Wiki/logos/PlagueSamples.jpg) 血疫樣本
    
-   ## ![image](/Wiki/images/BloodPlagueCure.jpg) 血疫注射器
+   ## ![image](/Wiki/logos/BloodPlagueCure.jpg) 血疫注射器
