--- a/Wiki/中文/建築/說明.md
+++ b/Wiki/中文/建築/說明.md
@@ -7,7 +7,7 @@
 
 ## 描述
 
-這個模組為遊戲增加了一個更多種類更方便的建築系統，讓你能夠更在末日環境下建造自己的家園。
+這個模組增強遊戲中的建設系統，提供更多建築選項和自訂功能，使玩家能夠更靈活地建設和擴展自己的基地，並提供更多建築材料和防禦設施。
 
 # 建築配方
 
