--- a/Wiki/中文/說明.md
+++ b/Wiki/中文/說明.md
@@ -14,8 +14,6 @@
 
 ## TerjeMods
 
-![image](/Wiki/logos/General.png)
-
 ### 🩺 [醫學](醫療/說明.md)
 
 **描述：**
@@ -40,9 +38,7 @@
 
 ## BloodPlague
 
-![image](/Wiki/logos/BloodPlagueHeart.jpg)
-
-### 💀 [瘟疫之心](瘟疫之心/說明.md)
+### 🩺 [瘟疫之心](瘟疫之心/說明.md)
 
 **描述：**
 血疫疾病是搖曳露營DayZ伺服器中的一種新型致命疾病，與殭屍接觸高機率會被感染瘟疫，瘟疫之心是血疫疾病的源頭。
@@ -51,7 +47,7 @@
 
 ## BaseBuildingPlus
 
-### 🔨 [基地建設擴展](建築/說明.md)
+### 🩺 [基地建設擴展](建築/說明.md)
 
 **描述：**
 BaseBuildingPlus (BBP) 是一個在DayZ遊戲中熱門且常見的模組建造系統，提供多種擴展建築選項來幫助玩家進行更複雜的建設，增強遊戲的建造體驗。
