--- a/Wiki/中文/醫療/說明.md
+++ b/Wiki/中文/醫療/說明.md
@@ -53,10 +53,10 @@
 ## ![image](/Wiki/images/tablets.png) 藥物
 
 > 藥物分為三種類別：藥片、安瓿瓶和注射器。  
-藥片通常用於疾病的早期階段和預防。  
+藥片通常用於疾病的早期作用和預防。  
 每包藥片包含十顆。  
 相同種類的藥片包裝可以合併使用。  
-安瓿瓶包含強效藥物，用於治療中重度階段的複雜疾病或病症。  
+安瓿瓶包含強效藥物，用於治療中重度作用的複雜疾病或病症。  
 玩家必須使用針筒來注射藥物。  
 每次注射後，針筒會被污染，必須用酒精消毒或在火爐上用水煮沸來清潔。  
 注射器與安瓿瓶類似，但不需要針筒。  
@@ -66,11 +66,11 @@
 
 > 疫苗可以讓你保護自己免受危險疾病的侵害，顯著降低感染的可能性。使用疫苗後，會對特定感染產生免疫力，幫助角色避免在污染環境中遭遇的疾病。提前使用疫苗來增強角色的免疫力，並始終監控是否需要重新接種以維持保護。
 
-| 名稱       | 物品                      | Stage   | Form and Packaging | 持續時間（秒） | Overdose |
+| 名稱       | 物品                      | 作用   | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:----------:|:-------------------------:|:-------:|:-------------------:|:------------:|:--------:|
-| Vaxicam    | TerjeAmpouleVaxicam       | Vaccine | Ampoule             | 14400        | 0.8      |
-| Zerivax    | TerjeAmpouleZerivax       | Vaccine | Ampoule             | 7200         | 1.5      |
-| Rabivax    | TerjeAmpouleRabivax       | Vaccine | Ampoule             | 14400        | 1.3      |
+| Vaxicam    | TerjeAmpouleVaxicam       | 疫苗 | 安瓿             | 14400        | 0.8      |
+| Zerivax    | TerjeAmpouleZerivax       | 疫苗 | 安瓿             | 7200         | 1.5      |
+| Rabivax    | TerjeAmpouleRabivax       | 疫苗 | 安瓿             | 14400        | 1.3      |
 
 ## ![image](/Wiki/images/desinfection.png) 消毒
 
@@ -79,7 +79,7 @@
 在進行任何操作或手術之前，手部也應進行消毒，尤其是在野外環境中，感染風險會增加。
 消毒是極端條件下成功治療和健康安全的關鍵。
 
-| 名稱                      | 物品                 | Stage        |
+| 名稱                      | 物品                 | 作用        |
 |:-------------------------:|:--------------------:|:------------:|
 | Alcoholic Tincture        | 消毒酒精              | 消毒         |
 | Disinfectant Spray        | 消毒噴霧              | 消毒         |
@@ -93,11 +93,11 @@
 瘀傷會隨著時間自動癒合。  
 使用藥膏可以加速其癒合過程。
 
-| 名稱        | 物品                  | Form and Packaging | Duration (s) | Overdose |
+| 名稱        | 物品                  | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-----------:|:---------------------:|:-------------------:|:------------:|:--------:|
-| Viprosal    | TerjeSalveViprosal    | Tube of ointment    | 300          | 0.0      |
-| Capsicum    | TerjeSalveCapsicum    | Tube of ointment    | 400          | 0.0      |
-| Finalgon    | TerjeSalveFinalgon    | Tube of ointment    | 600          | 0.0      |
+| Viprosal    | TerjeSalveViprosal    | 藥膏    | 300          | 0.0      |
+| Capsicum    | TerjeSalveCapsicum    | 藥膏    | 400          | 0.0      |
+| Finalgon    | TerjeSalveFinalgon    | 藥膏    | 600          | 0.0      |
 
 ## ![image](/Wiki/images/organs.png)  ![image](/Wiki/images/bullet.png)  ![image](/Wiki/images/cut3.png) 內臟器官損傷、槍傷和刺傷
 
@@ -108,33 +108,33 @@
 維護良好的防彈背心可以保護你免受子彈傷害。然而，防彈背心被穿透的機率是通過彈道計算器計算的。  
 因此，輕型防彈背心可以保護你免受小口徑子彈的傷害，但無法防止中等和大口徑子彈。如果背心擋住了子彈，你會受到一個未裝甲的傷口，通常表現為瘀傷。
 
-| 名稱                        | 物品                             | Form and Packaging | Volume | Internal Organs (strength/time) | Bullet (strength/time) | StubEffectivity (strength/time) | 
+| 名稱                        | 物品                             | 劑型與包裝 | 容量 | 治療內臟（強度/時間） | 治療槍傷（強度/時間） | 作用效力（強度/時間） | 
 |:---------------------------:|:--------------------------------:|:-------------------:|:------:|:-------------------------------:|:---------------------:|:--------------------------------:|
-| Medical Bowl with Instrument (Ceramic)| TerjeSurgicalTool_Ceramic        | Surgical tools     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
-| Medical Bowl with Instrument (White)  | TerjeSurgicalTool_White          | Surgical tools     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
-| Field Surgical Kit                   | TerjeSurgicalKit                 | Surgical kit       | 5      | 0.2/40                          | 0.5/25                | 0.7/20                           |
-| IFAK                        | TerjeFirstAidKitIndividual_Black | Universal kit      | 10     | 0.3/40                          | 0.6/30                | 0.8/20                           |
-| AFAK                        | TerjeFirstAidKitAdvance_Black    | Universal kit      | 20     | 0.3/40                          | 0.6/30                | 0.8/20                           |
+| Medical Bowl with Instrument (Ceramic)| TerjeSurgicalTool_Ceramic        | 手術工具     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
+| Medical Bowl with Instrument (White)  | TerjeSurgicalTool_White          | 手術工具     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
+| Field Surgical Kit                   | TerjeSurgicalKit                 | 手術包       | 5      | 0.2/40                          | 0.5/25                | 0.7/20                           |
+| IFAK                        | TerjeFirstAidKitIndividual_Black | 急救包      | 10     | 0.3/40                          | 0.6/30                | 0.8/20                           |
+| AFAK                        | TerjeFirstAidKitAdvance_Black    | 急救包      | 20     | 0.3/40                          | 0.6/30                | 0.8/20                           |
 
 ## ![image](/Wiki/images/cut2.png) 手術縫合線
 
-| 名稱                      | 物品                             | Form and Packaging | Volume | Internal Organs (strength/time) | Bullet (strength/time) | StubEffectivity (strength/time) | 
+| 名稱                      | 物品                             | 劑型與包裝 | 容量 | 治療內臟（強度/時間） | 治療槍傷（強度/時間） | 作用效力（強度/時間） | 
 |:-------------------------:|:--------------------------------:|:-------------------:|:------:|:-------------------------------:|:---------------------:|:--------------------------------:|
-| Medical Bowl with Instrument (Ceramic) | TerjeSurgicalTool_Ceramic      | Surgical tools     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
-| Medical Bowl with Instrument (White) | TerjeSurgicalTool_White        | Surgical tools     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
-| Field Surgical Kit                  | TerjeSurgicalKit               | Surgical kit       | 5      | 0.2/40                          | 0.5/25                | 0.7/20                           |
-| IFAK                       | TerjeFirstAidKitIndividual_Black | Universal kit      | 10     | 0.3/40                          | 0.6/30                | 0.8/20                           |
-| AFAK                       | TerjeFirstAidKitAdvance_Black  | Universal kit      | 20     | 0.3/40                          | 0.6/30                | 0.8/20                           |
+| Medical Bowl with Instrument (Ceramic) | TerjeSurgicalTool_Ceramic      | 手術工具     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
+| Medical Bowl with Instrument (White) | TerjeSurgicalTool_White        | 手術工具     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
+| Field Surgical Kit                  | TerjeSurgicalKit               | 手術包       | 5      | 0.2/40                          | 0.5/25                | 0.7/20                           |
+| IFAK                       | TerjeFirstAidKitIndividual_Black | 急救包      | 10     | 0.3/40                          | 0.6/30                | 0.8/20                           |
+| AFAK                       | TerjeFirstAidKitAdvance_Black  | 急救包      | 20     | 0.3/40                          | 0.6/30                | 0.8/20                           |
 
 ## ![image](/Wiki/images/brain.png) 腦震盪
 
 >頭部受到鈍器的強力打擊、角色附近的爆炸或使用防彈頭盔時被小口徑子彈擊中都會發生腦震盪。腦震蕩的最初症狀包括頭痛、頭暈、協調性不穩定和視力模糊，這使得行動和戰鬥變得困難。隨著時間的推移，腦震盪會自行消退，但為了加速康復，您可以使用特殊藥物來減輕症狀的強度。
 
-名稱  | 物品 | Stage | Level | Form and Packaging | Duration (sec) | Overdose |
+名稱  | 物品 | 作用 | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-----------:|:-----------:|:-----------:|:-----:|:---------:|:-------------:|:------------------:|
-|  Noopept  | TerjePillsNoopept | Treatment | -   |   Tablets  |      380      |         0.35        |
-|   Neirox  | TerjeAmpouleNeirox | Treatment | -   |   Ampoule  |      600      |        0.6        |
-|   Neirox  | TerjeInjectorNeirox | Treatment | -  |   Injector  |      500      |        0.3        |
+|  Noopept  | TerjePillsNoopept | 治療 | -   |   藥片  |      380      |         0.35        |
+|   Neirox  | TerjeAmpouleNeirox | 治療 | -   |   安瓿  |      600      |        0.6        |
+|   Neirox  | Terje注射器Neirox | 治療 | -  |   注射器  |      500      |        0.3        |
 
 # 感染和疾病
 
@@ -147,21 +147,21 @@
 可能需要多次服用藥物才能完全康復。
 輕微的感冒可以透過在溫暖的地方睡覺來治癒。
 
-| 名稱          | 物品                     | Stage    | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱          | 物品                     | 作用    | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-------------:|:------------------------:|:--------:|:-----:|:-------------------:|:------------:|:--------:|
-| Tetracycline  | TetracyclineAntibiotics  | Treatment| 1     | Tablets             | 300          | 0.45     |
-| Paracetamol   | TerjePillsParacetamol    | Treatment| 1     | Tablets             | 200          | 0.45     |
-| Ibuprofen     | TerjePillsIbuprofen      | Treatment| 2     | Tablets             | 300          | 0.35     |
-| Nurofen       | TerjePillsNurofen        | Treatment| 2     | Tablets             | 300          | 0.52     |
-| Amoxiclav     | TerjePillsAmoxiclav      | Treatment| 2     | Tablets             | 1200         | 0.75     |
-| Piperacillin  | TerjePillsPiperacylin    | Treatment| 2     | Tablets             | 1100         | 0.45     |
-| Ketarol       | TerjeAmpouleKetarol      | Treatment| 2     | Ampoule             | 1200         | 0.5      |
-| Amoxivan      | TerjeAmpouleAmoxivan     | Treatment| 2     | Ampoule             | 900          | 0.3      |
-| Topoisomerase | TerjeInjectorTopoizomeraza| Treatment| 3     | Injector            | 900          | 0.65     |
-| Imipenem      | TerjeAmpouleImipenem     | Treatment| 3     | Ampoule             | 900          | 0.7      |
-| Flemoclave     | TerjeAmpouleFlemoclav    | Treatment| 3     | Ampoule             | 1200         | 0.8      |
-| Amoxiclav     | TerjeInjectorAmoxiclav   | Treatment| 3     | Injector            | 1800         | 0.6      |
-| Vaxicam       | TerjeAmpouleVaxicam      | Vaccine  | -     | Ampoule             | 14400        | 0.8      |
+| Tetracycline  | TetracyclineAntibiotics  | 治療| 1     | 藥片             | 300          | 0.45     |
+| Paracetamol   | TerjePillsParacetamol    | 治療| 1     | 藥片             | 200          | 0.45     |
+| Ibuprofen     | TerjePillsIbuprofen      | 治療| 2     | 藥片             | 300          | 0.35     |
+| Nurofen       | TerjePillsNurofen        | 治療| 2     | 藥片             | 300          | 0.52     |
+| Amoxiclav     | TerjePillsAmoxiclav      | 治療| 2     | 藥片             | 1200         | 0.75     |
+| Piperacillin  | TerjePillsPiperacylin    | 治療| 2     | 藥片             | 1100         | 0.45     |
+| Ketarol       | TerjeAmpouleKetarol      | 治療| 2     | 安瓿             | 1200         | 0.5      |
+| Amoxivan      | TerjeAmpouleAmoxivan     | 治療| 2     | 安瓿             | 900          | 0.3      |
+| Topoisomerase | Terje注射器Topoizomeraza| 治療| 3     | 注射器            | 900          | 0.65     |
+| Imipenem      | TerjeAmpouleImipenem     | 治療| 3     | 安瓿             | 900          | 0.7      |
+| Flemoclave     | TerjeAmpouleFlemoclav    | 治療| 3     | 安瓿             | 1200         | 0.8      |
+| Amoxiclav     | TerjeInjectorAmoxiclav   | 治療| 3     | 注射器            | 1800         | 0.6      |
+| Vaxicam       | TerjeAmpouleVaxicam      | 疫苗  | -     | 安瓿             | 14400        | 0.8      |
 
 ## ![image](/Wiki/images/poisoning.png) 食物中毒
 
@@ -170,52 +170,52 @@
 如果不及時治療，你的角色的病情可能會惡化，導致脫水和隨後的健康損失。
 要治療它，請多喝水並使用特殊藥物來緩解症狀。
 
-| 名稱                | 物品                       | Stage   | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱                | 物品                       | 作用   | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-------------------:|:-------------------------:|:-------:|:-----:|:------------------:|:------------:|:--------:|
-| Charcoal  | CharcoalTablets           | Treatment |   1   | Tablets           |      300     |   0.01   |
-| Polysorb            | TerjePillsPolisorb        | Treatment |   1   | Tablets           |      300     |   0.05   |
-| Phthalazole          | TerjePillsFtalazol        | Treatment |   1   | Tablets           |     1200     |   0.25   |
-| Mesalazine          | TerjePillsMesalazin       | Treatment |   2   | Tablets           |      600     |   0.35   |
-| Chelating Tablets   | ChelatingTablets          | Treatment |   2   | Tablets           |      600     |   0.6    |
-| Metoclopramid      | TerjeAmpouleMetoclopramid | Treatment |   2   | Ampoule           |     1200     |   0.4    |
-| Heptral             | TerjeAmpouleHeptral       | Treatment |   3   | Ampoule           |      600     |   0.6    |
-| Stomaproxidal       | TerjeInjectorStomaproxidal| Treatment |   3   | Injector          |      900     |   0.68   |
+| Charcoal  | Charcoal藥片           | 治療 |   1   | 藥片           |      300     |   0.01   |
+| Polysorb            | TerjePillsPolisorb        | 治療 |   1   | 藥片           |      300     |   0.05   |
+| Phthalazole          | TerjePillsFtalazol        | 治療 |   1   | 藥片           |     1200     |   0.25   |
+| Mesalazine          | TerjePillsMesalazin       | 治療 |   2   | 藥片           |      600     |   0.35   |
+| Chelating Tablets   | ChelatingTablets          | 治療 |   2   | 藥片           |      600     |   0.6    |
+| Metoclopramid      | TerjeAmpouleMetoclopramid | 治療 |   2   | 安瓿           |     1200     |   0.4    |
+| Heptral             | TerjeAmpouleHeptral       | 治療 |   3   | 安瓿           |      600     |   0.6    |
+| Stomaproxidal       | TerjeInjectorStomaproxidal| 治療 |   3   | 注射器          |      900     |   0.68   |
 
 ## ![image](/Wiki/images/biohazard.png) 化學中毒
 
->化學中毒是由於吸入有毒氣體而發生的。早期症狀包括咳嗽。隨著中毒的進展，會出現嘔吐、噁心等症狀。在後期階段，化學中毒會導致嚴重的健康損失，如果不及時治療可能會致命。
+>化學中毒是由於吸入有毒氣體而發生的。早期症狀包括咳嗽。隨著中毒的進展，會出現嘔吐、噁心等症狀。在後期作用，化學中毒會導致嚴重的健康損失，如果不及時治療可能會致命。
 要治療中毒，請服用解毒劑或減少毒性作用的特殊藥物。
 
-| 名稱             | 物品                      | Stage   | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱             | 物品                      | 作用   | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:----------------:|:------------------------:|:-------:|:-----:|:------------------:|:------------:|:--------:|
-| Rombiopental     | TerjePillsRombiopental   | Treatment |   1   | Tablets           |       30     |   0.15   |
-| Neuroсetal       | TerjeAmpouleNeirocetal   | Treatment |   2   | Ampoule           |      500     |   1.25   |
-| AntiChem Injector | AntiChemInjector         | Treatment |   3   | Injector          |      180     |   1.1    |
+| Rombiopental     | TerjePillsRombiopental   | 治療 |   1   | 藥片           |       30     |   0.15   |
+| Neuroсetal       | TerjeAmpouleNeirocetal   | 治療 |   2   | 安瓿           |      500     |   1.25   |
+| AntiChem Injector | AntiChemInjector         | 治療 |   3   | 注射器          |      180     |   1.1    |
 
 ## ![image](/Wiki/images/radiation.png) 輻射中毒
 
 >處於高輻射水平的區域或接觸受污染的物品會導致輻射中毒。早期症狀包括虛弱、噁心和頭暈。隨著時間的推移，角色可能會出現流血和免疫系統減弱的情況。在後期，輻射中毒會導致嚴重的健康損失和身體疲憊，威脅角色的生命。
 要治療輻射中毒，請服用消除體內輻射的藥物，例如碘片或抗輻射藥物。避開輻射區域或使用防護裝備以盡量減少暴露。
 
-| 名稱                        | 物品                          | Stage   | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱                        | 物品                          | 作用   | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:---------------------------:|:----------------------------:|:-------:|:-----:|:------------------:|:------------:|:--------:|
-| B190                       | TerjePillsB190               | Treatment |   1   | Tablets           |      140     |   0.3    |
-| Potassium Iodide           | TerjePillsPotassiumIodide    | Treatment |   1   | Tablets           |       60     |   0.2    |
-| Hexacyanoferrate           | TerjePillsHexacyanoferrate   | Treatment |   1   | Tablets           |      120     |   0.3    |
-| Mexamine                   | TerjePillsMexamine           | Treatment |   2   | Tablets           |       25     |   0.75   |
-| Pentacin                   | TerjeAmpoulePentacin         | Treatment |   2   | Ampoule           |      400     |   0.5    |
-| Carboxyme     | TerjeAmpouleCarboxyme        | Treatment |   2   | Ampoule           |      600     |   0.6    |
-| Radioprotector             | TerjeInjectorRadioprotector  | Treatment |   3   | Injector          |      600     |   0.75   |
+| B190                       | TerjePillsB190               | 治療 |   1   | 藥片           |      140     |   0.3    |
+| Potassium Iodide           | TerjePillsPotassiumIodide    | 治療 |   1   | 藥片           |       60     |   0.2    |
+| Hexacyanoferrate           | TerjePillsHexacyanoferrate   | 治療 |   1   | 藥片           |      120     |   0.3    |
+| Mexamine                   | TerjePillsMexamine           | 治療 |   2   | 藥片           |       25     |   0.75   |
+| Pentacin                   | TerjeAmpoulePentacin         | 治療 |   2   | 安瓿           |      400     |   0.5    |
+| Carboxyme     | TerjeAmpouleCarboxyme        | 治療 |   2   | 安瓿           |      600     |   0.6    |
+| Radioprotector             | TerjeInjectorRadioprotector  | 治療 |   3   | 注射器          |      600     |   0.75   |
 
 ## ![image](/Wiki/images/virusz.png) 殭屍病毒
 
 >殭屍病毒透過空氣中的飛沫和體液傳播。在與殭屍的近距離戰鬥中，有很小的幾率被感染。如果殭屍對你造成傷害，幾率就會增加。使用面罩和防彈衣以減少感染的可能性。該病毒有很長的潛伏期。玩家有一個多小時的即時時間來尋找解藥。在感染的末期，您的健康狀況開始迅速惡化。
 
-| 名稱      | 物品                      | Stage     | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱      | 物品                      | 作用     | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:---------:|:-------------------------:|:---------:|:-----:|:------------------:|:------------:|:--------:|
-| Zivirol   | TerjeAmpouleZivirol       | Treatment |   -   | Ampoule           |     1000     |   2.35   |
-| Zivirol   | TerjeInjectorZivirol      | Treatment |   -   | Injector          |     1200     |   2.5    |
-| Zerivax   | TerjeAmpouleZerivax       | Vaccine   |   -   | Ampoule           |     7200     |   1.5    |
+| Zivirol   | TerjeAmpouleZivirol       | 治療 |   -   | 安瓿           |     1000     |   2.35   |
+| Zivirol   | TerjeInjectorZivirol      | 治療 |   -   | 注射器          |     1200     |   2.5    |
+| Zerivax   | TerjeAmpouleZerivax       | 疫苗   |   -   | 安瓿           |     7200     |   1.5    |
 
 ## ![image](/Wiki/images/blood2.png) 敗血症
 
@@ -224,26 +224,26 @@
 如果您用髒手處理開放性傷口，也很有可能發生這種情況。
 如果不及時治療，敗血症會隨著時間的推移逐漸導致您的健康狀況惡化。
 
-| 名稱          | 物品                        | Stage     | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱          | 物品                        | 作用     | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-------------:|:---------------------------:|:---------:|:-----:|:------------------:|:------------:|:--------:|
-| Flemoclav     | TerjeAmpouleFlemoclav       | Treatment |   3   | Ampoule           |     1200     |   0.8    |
-| Imipenem      | TerjeAmpouleImipenem        | Treatment |   3   | Ampoule           |      900     |   0.7    |
-| Amoxiclav     | TerjeInjectorAmoxiclav      | Treatment |   3   | Injector          |      300     |   0.6    |
-| Topoisomerase | TerjeInjectorTopoizomeraza  | Treatment |   3   | Injector          |      600     |   0.65   |
+| Flemoclav     | TerjeAmpouleFlemoclav       | 治療 |   3   | 安瓿           |     1200     |   0.8    |
+| Imipenem      | TerjeAmpouleImipenem        | 治療 |   3   | 安瓿           |      900     |   0.7    |
+| Amoxiclav     | TerjeInjectorAmoxiclav      | 治療 |   3   | 注射器          |      300     |   0.6    |
+| Topoisomerase | TerjeInjectorTopoizomeraza  | 治療 |   3   | 注射器          |      600     |   0.65   |
 
 ## ![image](/Wiki/images/virus.png) 狂犬病
 
 >狂犬病透過受感染動物（例如狼）的叮咬傳播。感染後，病情逐漸進展，不會立即出現症狀。
-在早期階段，溫度波動和弱點開始出現，這可能會被忽略。
-在第二階段，病情惡化－角色出現嚴重的噁心和嘔吐，無法進食或飲水。
-在第三個關鍵階段，氣溫飆升，導致健康迅速喪失、精疲力盡和無法有效生存。
+在早期作用，溫度波動和弱點開始出現，這可能會被忽略。
+在第二作用，病情惡化－角色出現嚴重的噁心和嘔吐，無法進食或飲水。
+在第三個關鍵作用，氣溫飆升，導致健康迅速喪失、精疲力盡和無法有效生存。
 如果不及時治療，這種疾病將不可避免地導致死亡。在感染前使用特殊藥物進行早期治療或接種疫苗可以防止疾病惡化。
 
-| 名稱            | 物品                      | Stage     | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱            | 物品                      | 作用     | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:---------------:|:-------------------------:|:---------:|:-----:|:------------------:|:------------:|:--------:|
-| Rifampicin     | TerjeAmpouleRifampicyne  | Treatment |   3   | Ampoule           |      300     |   1.35   |
-| Rabinoline      | TerjeAmpouleRabinoline   | Treatment |   2   | Ampoule           |      600     |   0.8    |
-| Rabinucoline    | TerjeInjectorRabinucoline| Treatment |   3   | Injector          |      900     |   1.46   |
+| Rifampicin     | TerjeAmpouleRifampicyne  | 治療 |   3   | 安瓿           |      300     |   1.35   |
+| Rabinoline      | TerjeAmpouleRabinoline   | 治療 |   2   | 安瓿           |      600     |   0.8    |
+| Rabinucoline    | TerjeInjectorRabinucoline| 治療 |   3   | 注射器          |      900     |   1.46   |
 
 # 症狀
 
@@ -254,37 +254,37 @@
 一段時間後疼痛會自行消退。
 為了緩解疼痛，請使用相應等級或更高等級的止痛藥。
 
-| 名稱             | 物品                      | Stage     | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱             | 物品                      | 作用     | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:----------------:|:-------------------------:|:---------:|:-----:|:------------------:|:------------:|:--------:|
-| Painkiller       | PainkillerTablets         | Treatment |   1   | Tablets           |      300     |   0.2    |
-| Analgin          | TerjePillsAnalgin         | Treatment |   1   | Tablets           |      500     |   0.15   |
-| Nimesulide        | TerjePillsNimesulid       | Treatment |   1   | Tablets           |      600     |   0.25   |
-| Paracetamol      | TerjePillsParacetamol     | Treatment |   1   | Tablets           |      200     |   0.45   |
-| Ibuprofen        | TerjePillsIbuprofen       | Treatment |   1   | Tablets           |      600     |   0.35   |
-| Nurofen          | TerjePillsNurofen         | Treatment |   1   | Tablets           |      350     |   0.52   |
-| Noopept          | TerjePillsNoopept         | Treatment |   1   | Tablets           |      380     |   0.35   |
-| Ketarol          | TerjeAmpouleKetarol       | Treatment |   1   | Ampoule           |     1200     |   0.5    |
-| Novacaine        | TerjeAmpouleNovacaine     | Treatment |   2   | Ampoule           |     1200     |   0.4    |
-| Morphinocin         | TerjeAmpouleMorphine      | Treatment |   3   | Ampoule           |      850     |   0.52   |
-| Hexobarbital     | TerjeAmpouleGexobarbital  | Treatment |   3   | Ampoule           |      900     |   0.65   |
-| Reanimatal       | TerjeInjectorReanimatal   | Treatment |   1   | Injector          |      240     |   1.85   |
-| Morphine         | Morphine                  | Treatment |   3   | Injector          |      300     |   0.75   |
-| Promidol         | TerjeInjectorPromidol     | Treatment |   3   | Injector          |      600     |   0.45   |
+| Painkiller       | PainkillerTablets         | 治療 |   1   | 藥片           |      300     |   0.2    |
+| Analgin          | TerjePillsAnalgin         | 治療 |   1   | 藥片           |      500     |   0.15   |
+| Nimesulide        | TerjePillsNimesulid       | 治療 |   1   | 藥片           |      600     |   0.25   |
+| Paracetamol      | TerjePillsParacetamol     | 治療 |   1   | 藥片           |      200     |   0.45   |
+| Ibuprofen        | TerjePillsIbuprofen       | 治療 |   1   | 藥片           |      600     |   0.35   |
+| Nurofen          | TerjePillsNurofen         | 治療 |   1   | 藥片           |      350     |   0.52   |
+| Noopept          | TerjePillsNoopept         | 治療 |   1   | 藥片           |      380     |   0.35   |
+| Ketarol          | TerjeAmpouleKetarol       | 治療 |   1   | 安瓿           |     1200     |   0.5    |
+| Novacaine        | TerjeAmpouleNovacaine     | 治療 |   2   | 安瓿           |     1200     |   0.4    |
+| Morphinocin         | TerjeAmpouleMorphine      | 治療 |   3   | 安瓿           |      850     |   0.52   |
+| Hexobarbital     | TerjeAmpouleGexobarbital  | 治療 |   3   | 安瓿           |      900     |   0.65   |
+| Reanimatal       | TerjeInjectorReanimatal   | 治療 |   1   | 注射器          |      240     |   1.85   |
+| Morphine         | Morphine                  | 治療 |   3   | 注射器          |      300     |   0.75   |
+| Promidol         | TerjeInjectorPromidol     | 治療 |   3   | 注射器          |      600     |   0.45   |
 
 ## ![image](/Wiki/images/overdose.png) 藥物過量
 
 >當過量的藥物或有毒物質進入體內時，就會發生藥物過量。
-隨著毒素從系統中排出，過量的藥物逐漸減弱。它經歷三個階段：
+隨著毒素從系統中排出，過量的藥物逐漸減弱。它經歷三個作用：
 
->**第一階段:** 角色會感到噁心和幻覺，失去清晰的知覺。
+>**第一作用:** 角色會感到噁心和幻覺，失去清晰的知覺。
 
->**第二階段:** 病情惡化，角色可能會失去意識，變得容易受到環境的影響。
+>**第二作用:** 病情惡化，角色可能會失去意識，變得容易受到環境的影響。
 
->**第三階段:** 健康狀況嚴重惡化，威脅角色的生命。
+>**第三作用:** 健康狀況嚴重惡化，威脅角色的生命。
 
-| 名稱          | 物品          | Stage   | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱          | 物品          | 作用   | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-------------:|:-------------:|:-------:|:-----:|:------------------:|:------------:|:--------:|
-| Water         | WaterBottle   | Treatment |   1   | Bottle            |      300     |   0.0    |
+| Water         | WaterBottle   | 治療 |   1   | 瓶裝            |      300     |   0.0    |
 
 # 情緒狀態
 
@@ -294,17 +294,17 @@
 如果睡眠指示燈變黃，角色就會開始打哈欠，視力也會逐漸惡化。
 當指示器達到紅色水平時，角色可能會因精疲力竭而失去知覺。
 溫暖的地方是睡覺的理想場所——壁爐附近、帳篷裡、房子或睡袋裡。
-如果角色處於寒冷、飢餓或有嚴重的健康問題（第二階段及以上疾病），則無法入睡。
-在睡眠期間，角色會迅速恢復健康，並可能以很小的機率從輕微疾病（例如第一階段流感）中康復。
+如果角色處於寒冷、飢餓或有嚴重的健康問題（第二作用及以上疾病），則無法入睡。
+在睡眠期間，角色會迅速恢復健康，並可能以很小的機率從輕微疾病（例如第一作用流感）中康復。
 睡袋提供額外的溫暖和舒適，使睡眠在惡劣條件下更安全、更有效。
 
-| 名稱               | 物品                | Stage          | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱               | 物品                | 作用          | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:------------------:|:------------------:|:--------------:|:-----:|:------------------:|:------------:|:--------:|
-| MadBull® Energy Drink     | TerjeDrinkMadBull  | Recovery       |   8   | Bottle            |      1.0     |   0.0    |
-| Gang® Energy Drink        | TerjeDrinkGang     | Recovery       |   6   | Bottle            |      1.0     |   0.0    |
-| Yaguar® Energy Drink      | TerjeDrinkYaguar   | Recovery       |  10   | Bottle            |      1.0     |   0.0    |
-| PrayBoy® Energy Drink     | TerjeDrinkPrayboy  | Recovery       |   4   | Bottle            |      1.0     |   0.0    |
-| 6Energy® Energy Drink      | TerjeDrink6Energy  | Recovery       |   8   | Bottle            |      0.8     |   0.0    |
+| MadBull® Energy Drink     | TerjeDrinkMadBull  | 恢復       |   8   | 瓶裝            |      1.0     |   0.0    |
+| Gang® Energy Drink        | TerjeDrinkGang     | 恢復       |   6   | 瓶裝            |      1.0     |   0.0    |
+| Yaguar® Energy Drink      | TerjeDrinkYaguar   | 恢復       |  10   | 瓶裝            |      1.0     |   0.0    |
+| PrayBoy® Energy Drink     | TerjeDrinkPrayboy  | 恢復       |   4   | 瓶裝            |      1.0     |   0.0    |
+| 6Energy® Energy Drink      | TerjeDrink6Energy  | 恢復       |   8   | 瓶裝            |      0.8     |   0.0    |
 
 ## ![image](/Wiki/images/mental.png) 精神狀態
 
@@ -312,15 +312,15 @@
 在這種情況下，角色可能會感到恐慌和迷失方向，使生存和與環境的互動變得複雜。
 為了緩解症狀，可以使用抗憂鬱藥物來穩定心理並減輕壓力因素的負面影響。
 
-| 名稱              | 物品                         | Stage     | Level | Form and Packaging | Duration (s) | Overdose |
+| 名稱              | 物品                         | 作用     | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-----------------:|:----------------------------:|:---------:|:-----:|:------------------:|:------------:|:--------:|
-| Adepress          | TerjePillsAdepress          | Treatment |   1   | Tablets           |      150     |   0.2    |
-| Agteminol         | TerjePillsAgteminol         | Treatment |   1   | Tablets           |      120     |   0.2    |
-| Venlafaxine       | TerjePillsVenlafaxine       | Treatment |   1   | Tablets           |      250     |   0.3    |
-| Actaparoxetine    | TerjeAmpouleActaparoxetine  | Treatment |   2   | Ampoule           |      400     |   0.4    |
-| Amitriptyline     | TerjeAmpouleAmitriptyline   | Treatment |   3   | Ampoule           |      600     |   0.4    |
-| Metralindole      | TerjeAmpouleMetralindole    | Treatment |   2   | Ampoule           |      300     |   0.1    |
-| Amfitalicyne      | TerjeInjectorAmfitalicyne   | Treatment |   3   | Injector          |      520     |   0.6    |
+| Adepress          | TerjePillsAdepress          | 治療 |   1   | 藥片           |      150     |   0.2    |
+| Agteminol         | TerjePillsAgteminol         | 治療 |   1   | 藥片           |      120     |   0.2    |
+| Venlafaxine       | TerjePillsVenlafaxine       | 治療 |   1   | 藥片           |      250     |   0.3    |
+| Actaparoxetine    | TerjeAmpouleActaparoxetine  | 治療 |   2   | 安瓿           |      400     |   0.4    |
+| Amitriptyline     | TerjeAmpouleAmitriptyline   | 治療 |   3   | 安瓿           |      600     |   0.4    |
+| Metralindole      | TerjeAmpouleMetralindole    | 治療 |   2   | 安瓿           |      300     |   0.1    |
+| Amfitalicyne      | TerjeInjectorAmfitalicyne   | 治療 |   3   | 注射器          |      520     |   0.6    |
 
 # 區域
 
