--- a/Wiki/中文/搖曳露營伺服器.md
+++ b/Wiki/中文/搖曳露營伺服器.md
@@ -53,3 +53,12 @@
 BaseBuildingPlus (BBP) 是一個在DayZ遊戲中熱門且常見的模組建造系統，提供多種擴展建築選項來幫助玩家進行更複雜的建設，增強遊戲的建造體驗。
 
 ---
+
+## AI
+
+### 📛 [BOSS](Boss/說明.md)
+
+**描述：**
+這些 Boss 各具特色，部分擁有專屬地區和團隊，擊敗後可獲得稀有戰利品與高價值物資。
+
+---
