--- a/Wiki/中文/護甲/說明.md
+++ b/Wiki/中文/護甲/說明.md
@@ -14,7 +14,7 @@
 
 # 2級甲 (LEVEL 2)
 
-## ![image](/Wiki/logos/PACA.png) 
+## ![image](/Wiki/logos/PACA.png) ![image](/Wiki/logos/6B2.png) 
  
 **名單**
    - 6B2
