--- a/Wiki/中文/護甲/說明.md
+++ b/Wiki/中文/護甲/說明.md
@@ -126,12 +126,12 @@
    
 # 6級甲 (LEVEL 6)
 
-## ![image](/Wiki/logos/Hexgrid.png) 
+## ![image](/Wiki/logos/Hexgrid.png) ![image](/Wiki/logos/6B43.png) ![image](/Wiki/logos/Slick.png) ![image](/Wiki/logos/AVS.png) ![image](/Wiki/logos/THORIC.png) ![image](/Wiki/logos/Zhuk6A.png) ![image](/Wiki/logos/TigerSK.png) 
 
 **名單**
    - 6B43
    - Hexgrid
-   - Plate Carrier
+   - Tiger SK
    - Slick
    - AVS (Tagilla Edition)
    - THOR IC
