--- a/Wiki/中文/護甲/說明.md
+++ b/Wiki/中文/護甲/說明.md
@@ -96,7 +96,7 @@
    
 # 5級甲 (LEVEL 5)
 
-## ![image](/Wiki/logos/Gzhel.png) 
+## ![image](/Wiki/logos/Gzhel.png) ![image](/Wiki/logos/RedutM.png) ![image](/Wiki/logos/RedutT5.png) 
 
 **名單**
    - 6B13 (Killa Edition)
