--- a/Wiki/中文/護甲/說明.md
+++ b/Wiki/中文/護甲/說明.md
@@ -96,7 +96,7 @@
    
 # 5級甲 (LEVEL 5)
 
-## ![image](/Wiki/logos/Gzhel.png) ![image](/Wiki/logos/RedutM.png) ![image](/Wiki/logos/RedutT5.png) 
+## ![image](/Wiki/logos/Gzhel.png) ![image](/Wiki/logos/RedutM.png) ![image](/Wiki/logos/RedutT5.png) ![image](/Wiki/logos/TacTec.png) ![image](/Wiki/logos/Osprey.png) ![image](/Wiki/logos/Korund.png) ![image](/Wiki/logos/IOTV.png) ![image](/Wiki/logos/HPC.png) ![image](/Wiki/logos/Defender2.png) ![image](/Wiki/logos/CPCGE.png) ![image](/Wiki/logos/6B13KE.png) ![image](/Wiki/logos/Bigpipe.png) 
 
 **名單**
    - 6B13 (Killa Edition)
