--- a/Wiki/中文/醫療/說明.md
+++ b/Wiki/中文/醫療/說明.md
@@ -81,8 +81,8 @@
 
 | 名稱                      | 物品                 | 作用        |
 |:-------------------------:|:--------------------:|:------------:|
-| Alcoholic Tincture        | 消毒酒精              | 消毒         |
-| Disinfectant Spray        | 消毒噴霧              | 消毒         |
+| Alcoholic Tincture        | DisinfectantAlcohol              | 消毒         |
+| Disinfectant Spray        | DisinfectantSpray              | 消毒         |
 
 # 身體狀況
 
@@ -134,7 +134,7 @@
 |:-----------:|:-----------:|:-----------:|:-----:|:---------:|:-------------:|:------------------:|
 |  Noopept  | TerjePillsNoopept | 治療 | -   |   藥片  |      380      |         0.35        |
 |   Neirox  | TerjeAmpouleNeirox | 治療 | -   |   安瓿  |      600      |        0.6        |
-|   Neirox  | Terje注射器Neirox | 治療 | -  |   注射器  |      500      |        0.3        |
+|   Neirox  | TerjeInjectorNeirox | 治療 | -  |   注射器  |      500      |        0.3        |
 
 # 感染和疾病
 
@@ -157,7 +157,7 @@
 | Piperacillin  | TerjePillsPiperacylin    | 治療| 2     | 藥片             | 1100         | 0.45     |
 | Ketarol       | TerjeAmpouleKetarol      | 治療| 2     | 安瓿             | 1200         | 0.5      |
 | Amoxivan      | TerjeAmpouleAmoxivan     | 治療| 2     | 安瓿             | 900          | 0.3      |
-| Topoisomerase | Terje注射器Topoizomeraza| 治療| 3     | 注射器            | 900          | 0.65     |
+| Topoisomerase | TerjeInjectorTopoizomeraza| 治療| 3     | 注射器            | 900          | 0.65     |
 | Imipenem      | TerjeAmpouleImipenem     | 治療| 3     | 安瓿             | 900          | 0.7      |
 | Flemoclave     | TerjeAmpouleFlemoclav    | 治療| 3     | 安瓿             | 1200         | 0.8      |
 | Amoxiclav     | TerjeInjectorAmoxiclav   | 治療| 3     | 注射器            | 1800         | 0.6      |
