--- a/Wiki/中文/醫療/說明.md
+++ b/Wiki/中文/醫療/說明.md
@@ -172,7 +172,7 @@
 
 | 名稱                | 物品                       | 作用   | Level | 劑型與包裝 | 持續時間（秒） | 過量服用 |
 |:-------------------:|:-------------------------:|:-------:|:-----:|:------------------:|:------------:|:--------:|
-| Charcoal  | Charcoal藥片           | 治療 |   1   | 藥片           |      300     |   0.01   |
+| Charcoal  | CharcoalTablets           | 治療 |   1   | 藥片           |      300     |   0.01   |
 | Polysorb            | TerjePillsPolisorb        | 治療 |   1   | 藥片           |      300     |   0.05   |
 | Phthalazole          | TerjePillsFtalazol        | 治療 |   1   | 藥片           |     1200     |   0.25   |
 | Mesalazine          | TerjePillsMesalazin       | 治療 |   2   | 藥片           |      600     |   0.35   |
