--- a/Wiki/中文/技能/說明.md
+++ b/Wiki/中文/技能/說明.md
@@ -25,7 +25,7 @@
 
 
 
-## 🛡️ 免疫
+## ![image](/Wiki/images/IMMUNITY.png) 免疫
 >免疫技能負責身體識別和對抗疾病、病毒及感染。這項技能會在成功治療各種疾病後逐步發展。
 
 ### 修正：
@@ -55,7 +55,7 @@
 + 輻射抵抗
 + 輻射再生
 
-## 🍎 新陳代謝
+## ![image](/Wiki/images/METABOLISM.png) 新陳代謝
 >新陳代謝技能類別能提高身體處理食物的效率，並在缺乏食物的情況下，讓你在不傷害健康的情況下更長時間生存。通過吃食物和喝水來訓練這項技能。
 
 ### 修正：
@@ -74,7 +74,7 @@
 + 飢餓抵抗
 + 掠食性消化
 
-## 💉 醫學
+## ![image](/Wiki/images/medicine.png) 醫學
 >醫學技能能讓你更有效地治療不同程度的疾病。通過為自己或其他倖存者提供直接的醫療幫助來提高技能。
 
 ### 天賦
@@ -92,7 +92,7 @@
 + 抗生素專家
 + 麻醉師
 
-## 🏃 運動
+## ![image](/Wiki/images/ATHLETICS.png) 運動
 >運動技能類別提高你的耐力，影響你在移動時的耐力消耗和恢復。通過長時間跑步來訓練這項技能。
 
 ### 修正：
@@ -111,7 +111,7 @@
 + 特技演員
 + 強壯骨骼
 
-## 💪 力量
+## ![image](/Wiki/images/STRENGTH.png) 力量
 >力量技能類別提高你的負重能力並增強近戰攻擊力。通過定期的體能活動和使用近戰武器來訓練這項技能。
 
 ### 修正：
@@ -130,7 +130,7 @@
 + 堅固之手
 + 絕殺一擊
 
-## 🕶️ 隱匿
+## ![image](/Wiki/images/STEALTH.png) 隱匿
 >隱匿技能類別讓你對感染者和其他倖存者更加隱蔽。通過悄悄移動並避免被感染者發現來訓練這項技能。
 
 ### 天賦
@@ -146,7 +146,7 @@
 + 忍者
 + 靜音步伐
 
-## 🌲 生存
+## ![image](/Wiki/images/SURVIVAL.png) 生存
 >生存技能類別提供幫助你在這個殘酷世界中生存的能力。通過擊殺感染者、製作篝火和更長時間的生存來訓練這項技能。
 
 ### 修正：
@@ -169,7 +169,7 @@
 + 生存本能
 + 蘑菇預感
 
-## 🦌 狩獵
+## ![image](/Wiki/images/HUNTING.png) 狩獵
 >狩獵技能類別讓你更有效地狩獵動物、處理它們的屍體並設置陷阱。通過狩獵和處理動物屍體來訓練這項技能。
 
 ### 修正：
@@ -186,7 +186,7 @@
 + 腐爛專家
 + 路徑規劃師
 
-## 🎣 釣魚
+## ![image](/Wiki/images/FISHING.png) 釣魚
 >釣魚技能類別提高你釣魚的能力，製作釣具和設置釣魚陷阱。通過釣魚來訓練這項技能。
 
 ### 天賦
