--- a/Wiki/中文/技能/說明.md
+++ b/Wiki/中文/技能/說明.md
@@ -8,22 +8,8 @@
 ## 描述
 **TerjeSkills** 是一個為 DayZ 添加的獨特技能系統，使你的角色可以在不同方向上發展，提升在這個硬核世界中的生存能力和效率。通過發展角色的技能來延長生存時間，也能讓做事更有效率。
 
-## 組成
+## 此模組包含的技能
 此模組包含的技能：
-
-+ 🛡️ [免疫](#️-免疫)
-+ 🍎 [新陳代謝](#-metabolism)
-+ 💉 [醫學](#-medicine)
-+ 🏃 [運動](#-athletics)
-+ 💪 [力量](#-strength)
-+ 🕶️ [隱匿](#️-stealth)
-+ 🌲 [生存](#-survival)
-+ 🦌 [狩獵](#-hunting)
-+ 🎣 [釣魚](#-fishing)
-  
-+ ⚙️ [設置](#️-settings)
-
-
 
 ## ![image](/Wiki/images/IMMUNITY.png) 免疫
 >免疫技能負責身體識別和對抗疾病、病毒及感染。這項技能會在成功治療各種疾病後逐步發展。
